--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,8 @@ ciborium = "0.2"
 reqwest = { version = "=0.12.24", default-features = false, features = ["blocking", "rustls-tls-webpki-roots-no-provider"] }
 rustls = { version = "=0.23.23", default-features = false, features = ["std", "tls12"] }
 rustls-rustcrypto = { version = "=0.0.2-alpha", default-features = false, features = ["std", "zeroize"] }
+webpki = { package = "rustls-webpki", version = "=0.102.8", default-features = false, features = ["alloc"] }
+pki-types = { package = "rustls-pki-types", version = "=1.13.0", default-features = false, features = ["std"] }
 
 [profile.release]
 opt-level = "z"     # Optimize for size
